# LinguaLearn

./: .gitattributes  Dockerfile-Django  Dockerfile-duphne  LICENSE  README.md  conf.py  docker-compose.yml  lingual.db  lingual.sqbpro  lingual.sqlite3  manage.py  pyproject.toml  requirements.txt
LinguaLearn/: api.py  apps.py  asgi.py  consumers.py  forms.py  initializers.py  models.py  routing.py  settings.py  urls.py  views.py  wsgi.py
LinguaLearn/migrations/: 0001_initial.py  0002_rename_content_dictionary.py  0003_customuser_avatar_customuser_is_active_and_more.py  0004_dictionary_card_img.py  0005_dictionary_speech.py  0006_customuser_birth_date.py  0007_customuser_registration_date.py  0008_alter_customuser_registration_date.py  0009_alter_customuser_registration_date.py  0010_alter_customuser_registration_date.py  0011_remove_dictionary_card_img_remove_dictionary_speech_and_more.py  0012_alter_customuser_registration_date_and_more.py  0013_alter_customuser_registration_date_and_more.py  0014_alter_customuser_registration_date_and_more.py  0015_alter_customuser_registration_date_and_more.py  0016_remove_dictionary_customer_added_and_more.py  0017_alter_customuser_registration_date_and_more.py  (+28 more)
LinguaLern/: apps.py  asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
moduls/: T5.py  crossencoder.py  sbert.py
templates/: add_word.html  admin.html  auth.html  base_page.html  chat_form.html  dictionary.html  edit_word.html  error.html  index.html  index_b.html  profile.html  register.html  success.html  test.html  test_eye.html
utils/: feature.py
(+16 files in other folders)
